# fastapi-sllm

./: .gitignore  README.md  pyproject.toml  run.sh
app/: config.py  main.py
app/prompts/: default.txt
app/provider/: gguf_provider.py  model_provider.py  onnx_provider.py  sllm_provider.py  vision_provider.py
app/v1/: dependencies.py
app/v1/models/: chat.py
app/v1/routers/: chat.py
app/v1/services/: chat_service.py  sllm_service.py
app/v2/: dependencies.py
app/v2/models/: chat.py
app/v2/routers/: chat.py
app/v2/services/: chat_service.py  sllm_service.py
app/v3/: dependencies.py
app/v3/models/: chat.py  sllm_model.py
app/v3/prompts/: default.json  sql_assistant.json
app/v3/routers/: chat.py  prompt.py
app/v3/services/: chat_service.py  prompt_service.py  sllm_service.py
app/v4/: config.py  dependencies.py
app/v4/models/: prompt.py  schemas.py
app/v4/prompts/: code_assistant.json  creative_writer.json  therapy_assistant.json
app/v4/routers/: chat.py
app/v4/services/: chat_history.py  chat_service.py  conversation_service.py  sllm_service.py
app/v5/: config.py  dependencies.py
app/v5/models/: vision.py
app/v5/routers/: vision.py
app/v5/services/: vision_service.py
